# xv6-educational

./: .directory  .dockerignore  .gitignore  .gitignore.txt  BUFFER_CACHE_IMPROVEMENTS.md  BufferCachePage.qml  BufferCacheQuizPage.qml  CMakeLists backup.txt  CMakeLists.txt  ChatbotPanel.qml  ContextSwitchPage.qml  ContextSwitchQuizPage.qml  CoreEngineBackend.cpp  CoreEngineBackend.h  CpuPrivilegeModesPage.qml  CpuPrivilegeQuizPage.qml  CpuSchedulingPage.qml  Dockerfile  FILES_INDEX.md  FileSystem.qml  FileSystemLessonPage.qml  FsOverviewPage.qml  FsOverviewQuizPage.qml  INSTALLATION_CHECKLIST.md  InodesPage.qml  InodesQuizPage.qml  KernelGuardPage.qml  KernelGuardQuizPage.qml  KernelSpacePage.qml  KernelSpaceQuizPage.qml  LockMonitorPage.qml  LocksPage.qml  LocksQuizPage.qml  LoggingPage.qml  LoggingQuizPage.qml  LoginPage.qml  MEMCAT_IMPLEMENTATION.md  MEMORY_TRACING_SYSTEM_REPORT.md  Main.qml  Makefile  (+49 more)
.qtcreator/: CMakeLists.txt.user.3b28d6e  CMakeLists.txt.user.e5c23a0
backup/20260423_045743/: bio.c.old  bufferCacheWidget.cpp.old  bufferCacheWidget.h.old  fslog.c.old  ingest_from_stream.py.old
chatbot/: chatbot.py  ingest.py  requirements.txt  server.py
chatbot/chroma_db/53c4ea8e-97f1-4432-ba7e-509422be96f9/: index_metadata.pickle
chatbot/chroma_db/aca9c0e9-980e-4dc0-81b0-4d9359a39996/: index_metadata.pickle
chatbot/chroma_db/f5b289d6-9fc1-477a-9531-f4488ba884f1/: index_metadata.pickle
gui/MainGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
gui/MainGUI/filesystemUi/: CoreEngineWindow.cpp  CoreEngineWindow.h  InodeWidget.cpp  InodeWidget.h  PathResolutionWindow.cpp  bCacheBufferTheory.cpp  bCacheBufferTheory.h  blockAllocator.cpp  blockAllocator.h  bufferCacheWidget.cpp  bufferCacheWidget.cpp.bak  bufferCacheWidget.h  bufferCacheWidget_new.cpp  bufferCacheWidget_new.h  filesystemWindow.cpp  filesystemWindow.h  logWidget.cpp  logWidget.h
gui/MainGUI/memcatUi/: memcatWindow.cpp  memcatWindow.h
gui/MainGUI/schedulerUi/: schedulerWindow.cpp  schedulerWindow.h
kernel/: bio.c  bio.d  bio_new.c  console.c  console.d  csevent.h  cslog.c  cslog.d  cslog.h  defs.h  evproto.h  exec.c  exec.d  file.c  file.d  file.h  fs.c  fs.d  fs.h  fslog.c  fslog.d  fslog.h  fslog_new.c  kalloc.c  kalloc.d  kernel  kernel.asm  kernel.sym  kernelvec.S  log.c  log.d  main.c  main.d  memevent.h  memlayout.h  memlog.c  memlog.d  memlog.h  param.h  pipe.c  (+42 more)
mkfs/: mkfs  mkfs.c
user/: _cat  _cpuinfo  _cscat  _csexport  _dorphan  _echo  _faulttest  _forktest  _forphan  _fsexport  _grep  _grind  _infinite  _init  _kill  _ln  _lockinfo  _logstress  _ls  _memcat  _mkdir  _rm  _schedexport  _sh  _shrinktest  _stressfs  _usertests  _wc  _zombie  cat.asm  cat.d  cat.sym  cpuinfo.asm  cpuinfo.c  cpuinfo.d  cpuinfo.sym  cscat.asm  cscat.c  cscat.d  cscat.sym  (+101 more)
